[package]
name = "builder"
version = "0.1.0"
edition = "2018"
autotests = false
publish = false

[lib]
name = "builder"
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0", features = [ "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0" 


